--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Alexrvincent.GitHub.io</title>
+    <title>alexrvincent</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/alexrvincent">View on GitHub</a>
 
-          <h1 id="project_title">Alexrvincent.GitHub.io</h1>
-          <h2 id="project_tagline">Personal Website for Alex Vincent</h2>
+          <h1 id="project_title">Hi, I'm Alex Vincent</h1>
+          <h2 id="project_tagline">Welcome to my website</h2>
 
         </header>
     </div>
