Updated Profile Description

--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 				       </div>
 				       <div class="col-md-9">
 				            <div class="about-content">
-						<p>I'm a currently Senior at UC Santa Cruz nearly finished my B.S in Computer Science: Game Design. 
-                        I offer a variety of practical and leadership skills in programming, design, business, social media, or anything technology related. However, my focus lies in the merging fields of 
-                        computer science and digital/social media. Consider me a driven individual, willing to seize initiative when needed, or support the team however I can.
-                        In short, I strive to simply think differently; to let my experiences, hard-work, dedication, and creativity be evident in all of my work.</p>
+						<p>I'm a currently Senior at UC Santa Cruz nearly finished my B.S in Computer Science: Game Design. I offer a 3+ years of practical skills in programming (C/C++, Java, Javascript, HTML/CSS), software engineering, and user experience design. 
+                        My work experience has given me proficiency in a wide range of business-engineering leadership tasks including the technical aspects of business, property management, and social/digital media. 
+                        Rooted in the functional aspects of software engineering and user experience, my focus in games as the foundation of my educational background has prepared me for leadership in business and software development. 
+                        Consider me a driven individual, willing to seize initiative when needed or support the team however I can. In short, I strive to simply think differently; to let my experiences, hard-work, dedication, and creativity be evident in all of my work.</p>
 						<a href="#contact" class="btn btn-clear btn-lg border-color linear hire">CONTACT INFO</a>
 					</div>
 				       </div>
