--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</li>
 			<li>
 				<h1>I build Mobile Applications.</h1>
-				<h2>Android/iOS through Cordova/React Native.</h2>
+				<h2>Android/iOS through React Native.</h2>
 			</li>
 			<li>
 				<h1>I design User Interfaces.</h1>
@@ -128,13 +128,13 @@
 							My experience demonstrates 3+ years of skills in software engineering and UI/UX design.
 							I consider myself a engineer with a designer's intuition; capable enough to deliver practical
 							functionality to any organization while at the same time reimagining what software can be.
-							From Sketch files to JavaScript frameworks, I understand what it takes to design and build applications
+							From Sketch files to JavaScript frameworks, I love designing and building amazing applications
 							across all platforms. Furthermore, my game design/engineering background grants me a unique perspective
 							on what interactivity means for user experience.
 						</p>
 						<p>
 							As an individual, I consider myself to be a self-motivated
-							individual with an passion to make a difference in the lives of my users. In short, I strive
+							'go-getter' with a passion to make a difference in the lives of my users. In short, I strive
 							to simply think differently; to let my experiences, hard-work, and creativity
 							be evident in all of my work.
 						</p>
@@ -159,7 +159,7 @@
                 <div class="build progressbar-a">
                 	<b> <p align = "center"> Skill Proficiencies (last 3 yrs) </p> </b>
 					<div class="wrapp-progress">
-						<p class="pull-left">HTML / CSS (Bootstrap, Flexbox)</p>
+						<p class="pull-left">HTML5 / CSS3 (Bootstrap, Flexbox)</p>
 						<div class="progress">
 
 							<div class="progress-bar  clearfix" role="progressbar" aria-valuenow="83" aria-valuemin="10" aria-valuemax="100" style="width: 0%">
@@ -169,7 +169,7 @@
 						</div>
 					</div>
                     <div class="wrapp-progress">
-                        <p class="pull-left"> JavaScript (Jquery, Ajax, ES6, React, React Native, Cordova) </p>
+                        <p class="pull-left"> JavaScript (Jquery, Ajax, React.js, Redux, React Native) </p>
                         <div class="progress">
 
                           <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="wrapp-progress">
-                        <p class="pull-left"> Python (Django Web Framework, RESTful APIs) </p>
+                        <p class="pull-left"> Python (Django, RESTful APIs) </p>
                         <div class="progress">
 
                           <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
@@ -199,7 +199,7 @@
 						</div>
 					</div>
                     <div class="wrapp-progress">
-                        <p class="pull-left">DevOps (Git, Nginx, Docker, Jenkins, AWS) </p>
+                        <p class="pull-left">DevOps (Git, Nginx, Docker, Jenkins, AWS, Crashlytics) </p>
                         <div class="progress">
 
                           <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
@@ -278,11 +278,11 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p11-large2.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Copilot" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/portfolio/detail/copilot-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Copilot (2018) - React Native Mobile Developer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://sfoconnect.com/sfo-copilot" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p11-large2.png" alt="This Is Image">
-							   <div class="link"><a href="#">SFO Copilot</a></div>
+							   <div class="link"><a href="#">SFO Copilot (2016) - React Native Mobile Developer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
 								   <p>SFO Copilot (2018)</p>
@@ -300,14 +300,14 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p17-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Shared Ride Vans" class="link-search animated linear"><i class="fa fa-search"></i></a>
-								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+								   <a href="img/portfolio/detail/srv-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Shared Ride Vans (2017) - Front End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="https://www.flysfo.com/tofrom/transp-serv/to-sb/dtd.html" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p17-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">Shared Ride Vans</a></div>
+							   <div class="link"><a href="#">SFO Shared Ride Vans (2017) - Front End Engineer, Designer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
-								   <p>Shared Ride Vans (2017) </p>
+								   <p>SFO Shared Ride Vans (2017) </p>
 							   </div>
 						   </div>
 					   </div>
@@ -322,11 +322,11 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p16-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Temporary Access Badge System" class="link-search animated linear"><i class="fa fa-search"></i></a>
-								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+								   <a href="img/portfolio/detail/tbadge-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO T-Badge (2016) - Front-End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="https://sfoconnect.com/temporary-t-badges" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p16-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">Temporary Access Badge System</a></div>
+							   <div class="link"><a href="#">SFO T-Badge (2016) Front-End Engineer, Designer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
 								   <p>SFO T-Badge (2016)</p>
@@ -344,14 +344,14 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p15-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Request For Proposal" class="link-search animated linear"><i class="fa fa-search"></i></a>
-								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+								   <a href="img/portfolio/detail/rfp-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Request For Proposal (2016) - Front-End Engineer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="https://rfp.flysfo.com" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p15-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">Request For Proposal (2016)</a></div>
+							   <div class="link"><a href="#">SFO Request For Proposal (2016) - Front-End Engineer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
-								   <p>Request For Proposal (2016)</p>
+								   <p>SFO Request For Proposal (2016)</p>
 							   </div>
 						   </div>
 					   </div>
@@ -366,11 +366,11 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="https://www.youtube.com/watch?v=6XwShFUH0b8" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Project Perfect Citizen" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="https://www.youtube.com/watch?v=6XwShFUH0b8" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Project Perfect Citizen (2016) - Project Lead, Game UI Engineer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p10-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">Project Perfect Citizen (2016)</a></div>
+							   <div class="link"><a href="#">Project Perfect Citizen (2016) - Project Lead, Game UI Engineer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
 								   <p>Project Perfect Citizen (2016)</p>
@@ -388,11 +388,11 @@
 						<div class="thumbnail">
 						<div class="thumb-img">
 						<div class="link-attr">
-							<a href="https://www.youtube.com/watch?v=Pg-0oJ4kOc8?rel=0&vq=large" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Head of Social Media, Public Relations, Quality Assurance on Eye Of The Giant" class="link-search animated linear"><i class="fa fa-search"></i></a>
+							<a href="https://www.youtube.com/watch?v=Pg-0oJ4kOc8?rel=0&vq=large" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Eye Of The Giant (2015) - Quality Assurance & Community Manager" class="link-search animated linear"><i class="fa fa-search"></i></a>
 						   <a href="https://www.facebook.com/EyeOfTheGiant/" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 					   </div>
 						 <img class="linear img-portfolio img-responsive" src="img/portfolio/p03-large.png" alt="This Is Image">
-						   <div class="link"><a href="#">Eye Of The Giant (2015)</a></div>
+						   <div class="link"><a href="#">Eye Of The Giant (2015) - Quality Assurance & Community Manager</a></div>
 						   <div class="folio-caption">
 						   <i class="fa fa-caret-up"></i>
 						   <p>Eye Of The Giant (2015)</p>
@@ -410,11 +410,11 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p12-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="BiteToEat" class="link-search animated linear"><i class="fa fa-search"></i></a>
-								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+								   <a href="img/portfolio/detail/bitetoeat-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="BiteToEat (2016) - Mobile Developer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="https://github.com/alexrvincent/BiteToEat" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p12-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">BiteToEat (2016)</a></div>
+							   <div class="link"><a href="#">BiteToEat (2016) - Mobile Developer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
 								   <p>BiteToEat (2016)</p>
@@ -425,6 +425,28 @@
 				   </div>
 			   </div>
 		   </div>
+		   <!-- nmd-14 -->
+		   <div class="col-xs-12 col-sm-4 col-md-4 box" data-groups='["all", "mobile apps"]'>
+				   <div class="folio-img">
+					   <div class="portfolio-item">
+						   <div class="thumbnail">
+							   <div class="thumb-img">
+								   <div class="link-attr">
+									   <a href="img/portfolio/detail/nmd-template.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="NoMoreDice (2016) - Mobile Developer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+									   <a href="https://github.com/alexrvincent/NoMoreDice" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+								   </div>
+								   <img class="linear img-portfolio img-responsive" src="img/portfolio/p14-large.png" alt="This Is Image">
+								   <div class="link"><a href="#">NoMoreDice (2016) - Mobile Developer, Designer</a></div>
+								   <div class="folio-caption">
+									   <i class="fa fa-caret-up"></i>
+									   <p>NoMoreDice (2016)</p>
+								   </div>
+							   </div>
+						   </div>
+
+					   </div>
+				   </div>
+			   </div>
 		   <!-- dnd-13 -->
 		   <div class="col-xs-12 col-sm-4 col-md-4 box" data-groups='["all", "mobile apps"]'>
 			   <div class="folio-img">
@@ -432,36 +454,14 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p13-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Dungeons & Dragons Character Builder" class="link-search animated linear"><i class="fa fa-search"></i></a>
-								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+								   <a href="img/portfolio/detail/dnd-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="D&D Character Builder (2015) - Mobile Developer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="https://github.com/CS115CharacterBuilder/builder" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p13-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">D&D Character Builder (2015)</a></div>
+							   <div class="link"><a href="#">D&D Character Builder (2015) - Mobile Developer, Designer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
 								   <p>D&D Forge (2015)</p>
-							   </div>
-						   </div>
-					   </div>
-
-				   </div>
-			   </div>
-		   </div>
-		   <!-- nmd-14 -->
-		   <div class="col-xs-12 col-sm-4 col-md-4 box" data-groups='["all", "mobile apps"]'>
-			   <div class="folio-img">
-				   <div class="portfolio-item">
-					   <div class="thumbnail">
-						   <div class="thumb-img">
-							   <div class="link-attr">
-								   <a href="img/portfolio/p14-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="NoMoreDice" class="link-search animated linear"><i class="fa fa-search"></i></a>
-								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
-							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p14-large.png" alt="This Is Image">
-							   <div class="link"><a href="#">NoMoreDice (2016)</a></div>
-							   <div class="folio-caption">
-								   <i class="fa fa-caret-up"></i>
-								   <p>NoMoreDice (2016)</p>
 							   </div>
 						   </div>
 					   </div>
@@ -478,13 +478,13 @@
 					   <div class="thumb-img">
 
 					  <div class="link-attr">
-							<a href="https://youtu.be/Dic95q_xEaw?t=45s" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Z.O.N.E.O.U.T - Lead Designer, Programmer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+							<a href="https://youtu.be/Dic95q_xEaw?t=45s" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Z.O.N.E.O.U.T (2013) - Lead Programmer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 						   <a href="https://games.soe.ucsc.edu/project/zoneout" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 					   </div>
 						<img class="linear img-portfolio img-responsive" src="img/portfolio/p01-large.png" alt="This Is Image">
 					   <div class="folio-caption">
 					   <i class="fa fa-caret-up"></i>
-						   <p>Z.O.N.E.O.U.T (2013)</p>
+						   <p>Z.O.N.E.O.U.T (2013) - Lead Programmer</p>
 					   </div>
 					   </div>
 					</div>
@@ -498,7 +498,7 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p04-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="'The Last Of Us' Trailer Recreation - over 250k views on YouTube " class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/portfolio/p04-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="YouTube Channel (2012-present) - 300k+ views" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://www.youtube.com/channel/UCNugmW_qLbn5dDD6saSHMCA" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
 							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p04-large.png" alt="This Is Image">
@@ -520,7 +520,7 @@
 						<div class="thumbnail">
 						<div class="thumb-img">
 						 <div class="link-attr">
-							<a href="img/portfolio/p02-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="3D Modeling in Blender" class="link-search animated linear"><i class="fa fa-search"></i></a>
+							<a href="img/portfolio/p02-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="2D / 3D Art (2012-present) - Hobby UI/3D Artist" class="link-search animated linear"><i class="fa fa-search"></i></a>
 						   <a href="https://alexrvincent.deviantart.com/" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 					   </div>
 						<img class="linear img-portfolio img-responsive" src="img/portfolio/p02-large.png" alt="This Is Image">
@@ -559,7 +559,7 @@
 	  	<div class="row">
 			<div class="col-md-4 ">
 				<div class="build contact clearfix text-center">
-					<span class="fa fa-linkedin"></span>
+					<span class="fa fa-linkedin" style="cursor: pointer;" onclick="window.location='https://www.linkedin.com/in/alexrvincent'"></span>
 					<p>
 						<a target="_blank" href="https://www.linkedin.com/in/alexrvincent">
 							Find me on LinkedIn
