- removed unnessary files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32" />
     <title>Alex Vincent</title>
 
     <!-- Bootstrap core CSS -->
@@ -64,7 +64,7 @@
 	<div class="main-caption">
          <div class="main-avatar text-center">
 				                <div class="avatar img-thumbnail img-circle">
-				                <img src="img/profile.jpg" alt="avatar" />
+				                <img src="img/portfolio/profile.jpg" alt="avatar" />
 				                </div>
 		 </div>
 			<!-- slider -->
@@ -72,7 +72,7 @@
 		<ul class="slides">
 			<li>
 				<h1>Hi, I'm Alex Vincent.</h1>
-				<h2>A front-end developer with a designer's mindset.</h2>
+				<h2>A front-end engineer with a designer's mindset.</h2>
 			</li>
 			<li>
 				<h1>I build Web Applications.</h1>
@@ -116,7 +116,7 @@
 				       <div class="col-md-3">
 				            <div class="main-avatar text-center">
 				                <div class="avatar img-thumbnail img-circle">
-				                <img src="img/profile.jpg" alt="avatar" />
+				                <img src="img/portfolio/profile.jpg" alt="avatar" />
 				                </div>
 				             <b> <p align="center"> Alex Vincent </p> </b>
 				            </div>
@@ -278,11 +278,11 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/detail/copilot-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Copilot (2018) - React Native Mobile Developer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/copilot/copilot-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Copilot (2018) - React Native Mobile Developer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://sfoconnect.com/sfo-copilot" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p11-large2.png" alt="This Is Image">
-							   <div class="link"><a href="#">SFO Copilot (2016) - React Native Mobile Developer</a></div>
+							   <img class="linear img-portfolio img-responsive" src="img/projects/copilot/p11-large2.png" alt="This Is Image">
+							   <div class="link"><a href="#">SFO Copilot (2016) - React Native Designer/Mobile Developer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
 								   <p>SFO Copilot (2018)</p>
@@ -300,10 +300,10 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/detail/srv-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Shared Ride Vans (2017) - Front End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/srv/srv-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Shared Ride Vans (2017) - Front End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://www.flysfo.com/tofrom/transp-serv/to-sb/dtd.html" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p17-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/srv/p17-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">SFO Shared Ride Vans (2017) - Front End Engineer, Designer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -322,10 +322,10 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/detail/tbadge-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO T-Badge (2016) - Front-End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/tbadge/tbadge-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO T-Badge (2016) - Front-End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://sfoconnect.com/temporary-t-badges" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p16-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/tbadge/p16-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">SFO T-Badge (2016) Front-End Engineer, Designer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -344,10 +344,10 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/detail/rfp-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Request For Proposal (2016) - Front-End Engineer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/rfp/rfp-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO Request For Proposal (2016) - Front-End Engineer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://rfp.flysfo.com" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p15-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/rfp/p15-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">SFO Request For Proposal (2016) - Front-End Engineer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -369,7 +369,7 @@
 								   <a href="https://www.youtube.com/watch?v=6XwShFUH0b8" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Project Perfect Citizen (2016) - Project Lead, Game UI Engineer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://projectperfectcitizen.itch.io/project-perfect-citizen" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p10-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/ppc/p10-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">Project Perfect Citizen (2016) - Project Lead, Game UI Engineer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -391,7 +391,7 @@
 							<a href="https://www.youtube.com/watch?v=Pg-0oJ4kOc8?rel=0&vq=large" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Eye Of The Giant (2015) - Quality Assurance & Community Manager" class="link-search animated linear"><i class="fa fa-search"></i></a>
 						   <a href="https://www.facebook.com/EyeOfTheGiant/" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 					   </div>
-						 <img class="linear img-portfolio img-responsive" src="img/portfolio/p03-large.png" alt="This Is Image">
+						 <img class="linear img-portfolio img-responsive" src="img/projects/eotg/p03-large.png" alt="This Is Image">
 						   <div class="link"><a href="#">Eye Of The Giant (2015) - Quality Assurance & Community Manager</a></div>
 						   <div class="folio-caption">
 						   <i class="fa fa-caret-up"></i>
@@ -410,10 +410,10 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/detail/bitetoeat-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="BiteToEat (2016) - Mobile Developer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/bitetoeat/bitetoeat-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="BiteToEat (2016) - Mobile Developer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://github.com/alexrvincent/BiteToEat" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p12-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/bitetoeat/p12-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">BiteToEat (2016) - Mobile Developer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -432,10 +432,10 @@
 						   <div class="thumbnail">
 							   <div class="thumb-img">
 								   <div class="link-attr">
-									   <a href="img/portfolio/detail/nmd-template.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="NoMoreDice (2016) - Mobile Developer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+									   <a href="img/projects/nmd/nmd-template.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="NoMoreDice (2016) - Mobile Developer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 									   <a href="https://github.com/alexrvincent/NoMoreDice" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 								   </div>
-								   <img class="linear img-portfolio img-responsive" src="img/portfolio/p14-large.png" alt="This Is Image">
+								   <img class="linear img-portfolio img-responsive" src="img/projects/nmd/p14-large.png" alt="This Is Image">
 								   <div class="link"><a href="#">NoMoreDice (2016) - Mobile Developer, Designer</a></div>
 								   <div class="folio-caption">
 									   <i class="fa fa-caret-up"></i>
@@ -454,10 +454,10 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/detail/dnd-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="D&D Character Builder (2015) - Mobile Developer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/dnd/dnd-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="D&D Character Builder (2015) - Mobile Developer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://github.com/CS115CharacterBuilder/builder" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p13-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/dnd/p13-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">D&D Character Builder (2015) - Mobile Developer, Designer</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -478,13 +478,13 @@
 					   <div class="thumb-img">
 
 					  <div class="link-attr">
-							<a href="https://youtu.be/Dic95q_xEaw?t=45s" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Z.O.N.E.O.U.T (2013) - Lead Programmer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+							<a href="https://youtu.be/Dic95q_xEaw?t=45s" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="Z.O.N.E.O.U.T (2013) - Lead Programmer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
 						   <a href="https://games.soe.ucsc.edu/project/zoneout" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 					   </div>
-						<img class="linear img-portfolio img-responsive" src="img/portfolio/p01-large.png" alt="This Is Image">
+						<img class="linear img-portfolio img-responsive" src="img/projects/zoneout/p01-large.png" alt="This Is Image">
 					   <div class="folio-caption">
 					   <i class="fa fa-caret-up"></i>
-						   <p>Z.O.N.E.O.U.T (2013) - Lead Programmer</p>
+						   <p>Z.O.N.E.O.U.T (2013)</p>
 					   </div>
 					   </div>
 					</div>
@@ -498,10 +498,10 @@
 					   <div class="thumbnail">
 						   <div class="thumb-img">
 							   <div class="link-attr">
-								   <a href="img/portfolio/p04-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="YouTube Channel (2012-present) - 300k+ views" class="link-search animated linear"><i class="fa fa-search"></i></a>
+								   <a href="img/projects/youtube/p04-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="YouTube Channel (2012-present) - 300k+ views" class="link-search animated linear"><i class="fa fa-search"></i></a>
 								   <a href="https://www.youtube.com/channel/UCNugmW_qLbn5dDD6saSHMCA" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 							   </div>
-							   <img class="linear img-portfolio img-responsive" src="img/portfolio/p04-large.png" alt="This Is Image">
+							   <img class="linear img-portfolio img-responsive" src="img/projects/youtube/p04-large.png" alt="This Is Image">
 							   <div class="link"><a href="#">YouTube Channel</a></div>
 							   <div class="folio-caption">
 								   <i class="fa fa-caret-up"></i>
@@ -520,10 +520,10 @@
 						<div class="thumbnail">
 						<div class="thumb-img">
 						 <div class="link-attr">
-							<a href="img/portfolio/p02-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="2D / 3D Art (2012-present) - Hobby UI/3D Artist" class="link-search animated linear"><i class="fa fa-search"></i></a>
+							<a href="img/projects/art/p02-large.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="2D / 3D Art (2012-present) - Hobby UI/3D Artist" class="link-search animated linear"><i class="fa fa-search"></i></a>
 						   <a href="https://alexrvincent.deviantart.com/" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
 					   </div>
-						<img class="linear img-portfolio img-responsive" src="img/portfolio/p02-large.png" alt="This Is Image">
+						<img class="linear img-portfolio img-responsive" src="img/projects/art/p02-large.png" alt="This Is Image">
 						 <div class="link"><a href="#">2D / 3D Art </a></div>
 						<div class="folio-caption">
 						<i class="fa fa-caret-up"></i>
