- Ready for hosting!

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Add custom CSS here -->
-	
     <link href="css/style.css" rel="stylesheet">
     <link href="css/ekko-lightbox.css" rel="stylesheet">
     <link href="css/flexslider.css" rel="stylesheet">
@@ -67,7 +65,7 @@
 				                <img src="img/portfolio/profile.jpg" alt="avatar" />
 				                </div>
 		 </div>
-			<!-- slider -->
+	<!-- slider -->
 	<div id="flex-head" class="flexslider">
 		<ul class="slides">
 			<li>
@@ -96,7 +94,6 @@
 	<!-- end header -->
     <!-- /Full Page Image Header Area -->
 
-    
     <!-- content -->
     <div id="aboutMore" class="page">
       <div class="container">
@@ -133,12 +130,18 @@
 							on what interactivity means for user experience.
 						</p>
 						<p>
-							As an individual, I consider myself to be a self-motivated
+							I consider myself to be a self-motivated
 							'go-getter' with a passion to make a difference in the lives of my users. In short, I strive
 							to simply think differently; to let my experiences, hard-work, and creativity
 							be evident in all of my work.
 						</p>
-						<a href="#contact" class="btn btn-clear btn-lg border-color linear hire">CONTACT INFO</a>
+						<a href="#contact" class="btn btn-clear btn-lg border-color linear hire">
+							<i class="fa fa-user"></i>
+							CONTACT INFO</a>
+						<a href="/img/portfolio/ARVincent_Resume.pdf" class="btn btn-clear btn-lg border-color linear hire" download>
+							<i class="fa fa-download"></i>
+							DOWNLOAD RESUME
+						</a>
 					</div>
 				       </div>
 				   </div>
@@ -148,14 +151,6 @@
             </div><!-- end col -->
 		  
         <div class="col-md-6">
-			<!-- Skills:
-			- HTML5 / CSS (Bootstrap, Flexbox)
-			- JavaScript (Jquery, Ajax, ES6, Jest, React.js, React Native, Node.js)
-			- Python (Django Web Framework, RESTful APIs)
-			- DevOps (Git, Bitbucket, Nginx, Docker, Jenkins, Crashlytics, Amazon Web Services)
-			- UI/UX Design (Axure RP, Photoshop, Sketch)
-			- Software Development: Agile/Scrum & Kanban, Waterfall
-			-->
                 <div class="build progressbar-a">
                 	<b> <p align = "center"> Skill Proficiencies (last 3 yrs) </p> </b>
 					<div class="wrapp-progress">
