--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				       <div class="col-md-9">
 				            <div class="about-content">
 						<p>
-							My experience demonstrates 3+ years of skills in software engineering and UI/UX design.
+							My experience demonstrates 2+ years of skills in software engineering and UI/UX design.
 							I consider myself a engineer with a designer's intuition; capable enough to deliver practical
 							functionality to any organization while at the same time reimagining what software can be.
 							From Sketch files to JavaScript frameworks, I love designing and building amazing applications
@@ -164,7 +164,7 @@
 						</div>
 					</div>
                     <div class="wrapp-progress">
-                        <p class="pull-left"> JavaScript (Jquery, Ajax, React.js, Redux, React Native) </p>
+                        <p class="pull-left"> JavaScript (Jquery, Ajax, React, Redux, React Native) </p>
                         <div class="progress">
 
                           <div class="progress-bar  clearfix" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
@@ -265,6 +265,29 @@
 		  <div class="folio-content clearfix">
 		   <div class="row">
 		   <div class="container_folio clearfix gallery" id="grid">
+
+			<!-- echeckin-17 -->
+			<div class="col-xs-12 col-sm-4 col-md-4 box" data-groups='["all", "web apps", "sfo"]'>
+					<div class="folio-img">
+						<div class="portfolio-item">
+							<div class="thumbnail">
+								<div class="thumb-img">
+									<div class="link-attr">
+										<a href="img/projects/echeckin/echeckin-detail.png" data-gallery="global-gallery" data-parent="" data-toggle="lightbox" data-title="SFO eCheck-In (2018) - Front End Engineer, Designer" class="link-search animated linear"><i class="fa fa-search"></i></a>
+										<a href="https://echeckin.flysfo.com/" class="link-chain animated linear"><i class="fa  fa-chain"></i></a>
+									</div>
+									<img class="linear img-portfolio img-responsive" src="img/projects/echeckin/echeckin-thumbnail.png" alt="This Is Image">
+									<div class="link"><a href="#">SFO eCheck-In (2018) - Front End Engineer, Designer</a></div>
+									<div class="folio-caption">
+										<i class="fa fa-caret-up"></i>
+										<p>SFO eCheck-In (2018)</p>
+									</div>
+								</div>
+							</div>
+	 
+						</div>
+					</div>
+				 </div>
 
 			<!-- copilot-11 -->
 			<div class="col-xs-12 col-sm-4 col-md-4 box" data-groups='["all", "mobile apps", "sfo"]'>
@@ -588,7 +611,7 @@
         <div class="row">
 			<div class="col-md-6 ">
 				<div class="cp-right">
-					<p>&copy; 2018 Alex Vincent. All Rights Reserved. Template courtesy of <a target="_blank" href="https://html5up.net/">HTML5Up</a>. </p>
+					<p>&copy; 2018 Alex Vincent. All Rights Reserved. </p>
 				</div><!-- end build -->
 			</div><!-- end col -->
 			
