--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div id="flex-head" class="flexslider">
 					<ul class="slides">
 						<li>
-							<h1>Hey, I'm Alex Vincent.</h1>
+							<h1>Hi, I'm Alex Vincent.</h1>
 							<h2>A senior front-end engineer with a full stack background.</h2>
 						</li>
 						<li>
