Updated bio and profile image

--- a/index.html
+++ b/index.html
@@ -129,20 +129,27 @@
 								<div class="col-md-9">
 									<div class="about-content">
 										<p>
-											My experience demonstrates 5+ years of practical skills in software engineering, system architecture, and agile leadership in the tech industry.
-											While you'll mostly find me geeking out on new front-end web experiences, I'm well versed in wearing multiple hats in the full stack development process. 
-											I thrive working cross-functionally with different disciplines and when challenged to mentor a team of different skill levels. Ever since the Adobe Flash days, 
-											I've been an advocate for the power of the web and my deep understanding of how it's developed (and where it's going) only continues to inspire me.
+											My experience demonstrates 5+ years of practical skills in the software engineering,
+											engineering leadership, and agile tech industry. While you'll mostly find me geeking
+											out on new front-end web/mobile product experiences, I'm well versed in wearing
+											multiple hats in the full stack development process both as an individual
+											contributor and engineering leader. I thrive working cross-functionally along side
+											different disciplines and strive to always be a team member to count on and learn
+											from. From the old school Flash days / jQuery days to todays ever-changing iOS,
+											Android, and hybrid Web ecosystems, I'm as knowledgeable as I am passionate about
+											building the future of modern front-end.
 										</p>
 										<p>
-											In short, I consider myself a highly motivated, self-driven leader with a breadth of technical and leadership experience that's growing deeper everyday.
-											As an engineer I strive to think simply and as a creator I strive to think differently - letting my experiences, hard-work, and creativity be evident in all of my work.
+											In short, I consider myself a highly motivated, self-driven leader with a breadth
+											of technical and leadership experience that's growing deeper everyday. As an
+											engineer I strive to think simply, as a leader I strive to think empathetically
+											- letting my experiences, hard-work, and creativity be evident in all of my work.
 										</p>
 										<a href="#contact" class="btn btn-clear btn-lg border-color linear hire">
 											<i class="fa fa-user"></i>
 											CONTACT INFO</a>
-										<a href="/img/portfolio/Alex_Vincent_Resume.pdf" class="btn btn-clear btn-lg border-color linear hire"
-											download>
+										<a href="/img/portfolio/Alex_Vincent_Resume.pdf"
+											class="btn btn-clear btn-lg border-color linear hire" download>
 											<i class="fa fa-download"></i>
 											DOWNLOAD RESUME
 										</a>
@@ -301,7 +308,8 @@
 																class="fa  fa-chain"></i></a>
 													</div>
 													<img class="linear img-portfolio img-responsive"
-														src="img/projects/yummlyPro/yummlyPro-thumbnail.jpg" alt="An image of the logo for the Yummly Pro service">
+														src="img/projects/yummlyPro/yummlyPro-thumbnail.jpg"
+														alt="An image of the logo for the Yummly Pro service">
 													<div class="link"><a href="#">Yummly Pro (2020-2021) - Senior Front End Engineer</a></div>
 													<div class="folio-caption">
 														<i class="fa fa-caret-up"></i>
@@ -321,15 +329,16 @@
 											<div class="thumbnail">
 												<div class="thumb-img">
 													<div class="link-attr">
-														<a href="img/projects/yummlyMealPlan/yummlyMealPlan-detail.jpg" data-gallery="global-gallery"
-															data-parent="" data-toggle="lightbox"
+														<a href="img/projects/yummlyMealPlan/yummlyMealPlan-detail.jpg"
+															data-gallery="global-gallery" data-parent="" data-toggle="lightbox"
 															data-title="Yummly Meal Planner (2020) - Senior Software Engineer"
 															class="link-search animated linear"><i class="fa fa-search"></i></a>
 														<a href="https://www.yummly.com/meal-planning" class="link-chain animated linear"><i
 																class="fa  fa-chain"></i></a>
 													</div>
 													<img class="linear img-portfolio img-responsive"
-														src="img/projects/yummlyMealPlan/yummlyMealPlan-thumbnail.jpg" alt="An image of the logo for the Yummly Meal Planner">
+														src="img/projects/yummlyMealPlan/yummlyMealPlan-thumbnail.jpg"
+														alt="An image of the logo for the Yummly Meal Planner">
 													<div class="link"><a href="#">Yummly Meal Planner (2020) - Senior Software Engineer</a></div>
 													<div class="folio-caption">
 														<i class="fa fa-caret-up"></i>
@@ -356,7 +365,8 @@
 																class="fa  fa-chain"></i></a>
 													</div>
 													<img class="linear img-portfolio img-responsive"
-														src="img/projects/yummlyBlog/yummlyBlog-thumbnail.jpg" alt="An image of the logo for the Yummly Blog">
+														src="img/projects/yummlyBlog/yummlyBlog-thumbnail.jpg"
+														alt="An image of the logo for the Yummly Blog">
 													<div class="link"><a href="#">Yummly Blog (2020/2021) - Front End Engineer</a></div>
 													<div class="folio-caption">
 														<i class="fa fa-caret-up"></i>
@@ -383,7 +393,8 @@
 																class="fa  fa-chain"></i></a>
 													</div>
 													<img class="linear img-portfolio img-responsive"
-														src="img/projects/echeckin/echeckin-thumbnail.png" alt="An image of the logo of the SFO eCheck-in application">
+														src="img/projects/echeckin/echeckin-thumbnail.png"
+														alt="An image of the logo of the SFO eCheck-in application">
 													<div class="link"><a href="#">SFO eCheck-In (2018) - Front End Engineer, Designer</a></div>
 													<div class="folio-caption">
 														<i class="fa fa-caret-up"></i>
@@ -780,7 +791,9 @@
 				<div class="row">
 					<div class="col-md-6 ">
 						<div class="cp-right">
-							<p>&copy; <span><script>document.write(new Date().getFullYear())</script></span> Alex Vincent. All Rights Reserved. </p>
+							<p>&copy; <span>
+									<script>document.write(new Date().getFullYear())</script>
+								</span> Alex Vincent. All Rights Reserved. </p>
 						</div><!-- end build -->
 					</div><!-- end col -->
 
@@ -788,11 +801,11 @@
 
 						<ul class="list-inline">
 							<li><a target="_blank" href="https://www.twitter.com/alexrvincent" class="socIcon color-primary linear"><i
-								class="fa fa-twitter fa-2x"></i></a></li>
+										class="fa fa-twitter fa-2x"></i></a></li>
 							<li><a target="_blank" href="https://www.github.com/alexrvincent" class="socIcon color-primary linear"><i
-								class="fa fa-github fa-2x"></i></a></li>
+										class="fa fa-github fa-2x"></i></a></li>
 							<li><a target="_blank" href="https://www.linkedin.com/in/alexrvincent"
-								class="socIcon color-primary linear"><i class="fa fa-linkedin fa-2x"></i></a></li>
+									class="socIcon color-primary linear"><i class="fa fa-linkedin fa-2x"></i></a></li>
 							<li><a target="_blank" href="https://www.youtube.com/channel/UCNugmW_qLbn5dDD6saSHMCA"
 									class="socIcon color-primary linear"><i class="fa fa-youtube fa-2x"></i></a></li>
 						</ul>
